tests/cli/snapshots/cli__check__dynamic_key_some_candidates_missing.snap
---
source: tests/cli/check.rs
info:
  program: glot
  args:
    - check
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 1
----- stdout -----
error: "dynamic key from "object "toolKeys"""  missing-key
  --> ./src/app.tsx:9:12
  |
9 |     return t(key);
  |            ^
  = note: missing: Tools.updateNovel


✖ 1 problems (1 error, 0 warnings)

----- stderr -----
